Added versioned clickhouse role

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,5 @@
 ---
   - src: git@github.com:uxtuahgp/clickhouse-role.git
     scm: git
-#    version: "1.13"
+    version: "1.0.0"
     name: clickhouse 
